GNOME Bugzilla – Bug 787275
Tab and arrow keys do not work for widget navigation
Last modified: 2017-09-12 23:28:33 UTC
Would be cool if documents could be switched by usage of the arrow or tab keys, etc.!
This seems to be a more generic issue in that our move to libdazzle for shortcut management seems to have broken keyboard navigation with tab/arrows.
As it's probably related: Navigating within the project tree with arrow keys is currently only possible when clicking on a folder, not when clicking on a file.
(In reply to Peter E from comment #2) > As it's probably related: > Navigating within the project tree with arrow keys is currently only > possible when clicking on a folder, not when clicking on a file. I think that is a different issue, in that we've moved to single-click activation in the treeview for our new designs. I know changing behavior of base GtkWidgets like this can be controversial, so If someone wants to put in the effort, I'd consider a gsetting to change it + preference switch.
Created attachment 359376 [details] [review] shortcuts: fix tab/shifttab to change focus Since handling our own fallback delivery of events, we lose some of the default handling by gtkwindow. This allows the toplevel to activate a signal before we move on to processing application keybindings.
> in that we've moved to single-click Okay, my fault, didn't test this enough. The files I tried already were open. This inconsistency in navigating is okay I guess. However when done quickly, one can still navigate with the keys while clicking, especially when holding down the mouse. Even opening a file with Enter is possible. Also the delete key binding for files no longer works, but this might be unrelated (maybe https://bugzilla.gnome.org/show_bug.cgi?id=780472) as renaming with F2 still works.
(In reply to Peter E from comment #5) > Also the delete key binding for files no longer works, but this might be > unrelated (maybe https://bugzilla.gnome.org/show_bug.cgi?id=780472) as > renaming with F2 still works. That seems possible. If you run Builder Nightly like this you should see the error in question displayed (and it's probably related to Trash being on another file system). flatpak run org.gnome.Builder//master -vvvv
It looks like the underlying issue for this bug was fixed, and we have another bug for the Delete issue so I think it's safe to close this.