shortcuts: fix tab/shifttab to change focus

Since handling our own fallback delivery of events, we lose some of the
default handling by gtkwindow. This allows the toplevel to activate a
signal before we move on to processing application keybindings.

https://bugzilla.gnome.org/show_bug.cgi?id=787275